# with-baby-chat

./: .env  Cargo.toml
migrations/2022-12-29-080209_create_table/: up.sql
migrations/2022-12-31-093345_add_messages/: up.sql
sqls/: accounts.sql  channels.sql  friend_applications.sql  friends.sql  join_applications.sql  members.sql  users.sql
src/: author.rs  dao.rs  dispatcher.rs  error.rs  main.rs  message.rs  models.rs  schema.rs  websocket.rs
