[package]
name = "with-baby-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
hmac = "0.12.1"
jwt = "0.16.0"
r2d2 = "0.8.10"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres"] }
uuid = { version = "1.2.2", features = [
	"v1",
	"v3",
	"v4",
	"v5",
	"v6",
	"v7",
	"v8",
] }
